# drconverters

./: LICENSE  README.md  pyproject.toml
drconverters/: drkinefold.py  drkinfold.py  utils.py
examples/: README.md  SRPf.fa  SRPn.fa  SRPn_drtransformer.drf  SRPn_kinefold.drf  SRPn_kinfold.drf  get_kinefold.sh  grow_drtransformer.drf  grow_kinefold.drf  grow_kinfold.drf  randseq.fa
examples/sequences/: SRPr.fa  SRPt.fa  grow.fa
